feat: pos and gov changes
